test/scc/expr/semantic-errors/148.t
void test()
{
    union
    {
        int a, b;
    } c = { 0, 1 };
}